Pushing edited version of the app. Fixed design and the interactive resource feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".newFollowing"></activity>
+        <activity android:name=".Anorexia"></activity>
+        <activity android:name=".Bulimia" />
+        <activity android:name=".Binge" />
+        <activity android:name=".EatingDisorder" />
+        <activity android:name=".Schizophrenia" />
+        <activity android:name=".SchizophreniaofAlberta" />
+        <activity android:name=".EatingDisorderSupportNetworkofAlberta" />
+        <activity android:name=".CounsellingClinicalServices" />
+        <activity android:name=".IslamicFamilyServices" />
+        <activity android:name=".YWCAEdmonton" />
+        <activity android:name=".SexualAssaultCentreofEdmonton" />
+        <activity android:name=".PrideCentreofEdmonton" />
+        <activity android:name=".UniversityofAlbertaFaculty" />
+        <activity android:name=".THEFAMILYCENTRE" />
+        <activity android:name=".DropInYEG" />
+        <activity android:name=".CommunityCounsellingCentre" />
+        <activity android:name=".MomentumWalkInCounselling" />
+        <activity android:name=".CornerstoneCounsellingCentre" />
+        <activity android:name=".AccessOpenMindsEdmonton" />
+        <activity android:name=".HelpLocations" />
+        <activity android:name=".BipolarDepressionMania" />
+        <activity android:name=".SeasonalAD" />
+        <activity android:name=".MajorDepression" />
+        <activity android:name=".ObsessiveCompulsive" />
+        <activity android:name=".SocialAnxiety" />
+        <activity android:name=".GeneralAnxiety" />
+        <activity android:name=".PanicAttack" />
+        <activity android:name=".frag" />
+        <activity android:name=".IssuesPage" />
+        <activity android:name=".StressPage" />
+        <activity android:name=".DepressionPage" />
+        <activity android:name=".AnxietyPage" />
+        <activity android:name=".HubPage" />
+        <activity android:name=".newFollowing" />
         <activity android:name=".newFollowPage" />
         <!--
      The API key for Google Maps-based APIs is defined as a string resource.
